force-app/main/default/objects/RastreamentoCampos__c/RastreamentoCampos__c.object-meta.xml
<CustomObject>
    <label>Rastreamento de Campos</label>
    <nameField>
        <displayFormat>RC{000000}</displayFormat>
        <label>Rastreamento de Campo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rastreamento de Campos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>