force-app/main/default/objects/RastreamentoCampos__c/fields/Campo_rastreado__c.field-meta.xml
<CustomField>
    <fullName>Campo_rastreado__c</fullName>
    <label>Campo rastreado</label>
    <length>150</length>
    <type>Text</type>
</CustomField>