force-app/main/default/objects/RastreamentoCampos__c/fields/Data_anterior__c.field-meta.xml
<CustomField>
    <fullName>Data_anterior__c</fullName>
    <label>Data anterior</label>
    <type>DateTime</type>
</CustomField>