force-app/main/default/objects/RastreamentoCampos__c/fields/Data_atual__c.field-meta.xml
<CustomField>
    <fullName>Data_atual__c</fullName>
    <label>Data atual</label>
    <type>DateTime</type>
</CustomField>