force-app/main/default/objects/RastreamentoCampos__c/fields/Dias__c.field-meta.xml
<CustomField>
    <fullName>Dias__c</fullName>
    <formula>Data_atual__c - Data_anterior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>