force-app/main/default/objects/RastreamentoCampos__c/fields/Editado_por__c.field-meta.xml
<CustomField>
    <fullName>Editado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editado por</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunityStageTracking</relationshipName>
    <type>Lookup</type>
</CustomField>