force-app/main/default/objects/RastreamentoCampos__c/fields/Editado_por_alias__c.field-meta.xml
<CustomField>
    <fullName>Editado_por_alias__c</fullName>
    <label>Editado por alias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>