force-app/main/default/objects/RastreamentoCampos__c/fields/Editado_por_papel__c.field-meta.xml
<CustomField>
    <fullName>Editado_por_papel__c</fullName>
    <label>Editado por papel</label>
    <length>150</length>
    <type>Text</type>
</CustomField>