force-app/main/default/objects/RastreamentoCampos__c/fields/Horas__c.field-meta.xml
<CustomField>
    <fullName>Horas__c</fullName>
    <formula>(Data_atual__c  -  Data_anterior__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>