force-app/main/default/objects/RastreamentoCampos__c/fields/Valor_antigo__c.field-meta.xml
<CustomField>
    <fullName>Valor_antigo__c</fullName>
    <label>Valor antigo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>