force-app/main/default/objects/RastreamentoCampos__c/fields/Valor_novo__c.field-meta.xml
<CustomField>
    <fullName>Valor_novo__c</fullName>
    <label>Valor novo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>